# vkb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  third_party_sym
.cmake/: extras.cmake
examples/: CMakeLists.txt  example_widget.cpp
include/vkb/: vkb.h
include/vkb/detail/: BufferCreateInfo.h  ComputePipelineCreateInfo2.h  DescriptorPoolCreateInfo2.h  DescriptorSetLayoutCreateInfo2.h  DescriptorUpdater.h  HashFunctions.h  MemoryAlloc.h  PipelineCreateInfo2.h  PipelineLayoutCreateInfo2.h  PipelineShaderStageCreateInfo2.h  RenderPassCreateInfo2.h  SamplerCreateInfo2.h  ShaderModuleCreateInfo2.h  Storage.h  WriteDescriptorSet2.h
include/vkb/manager/: BindlessTextureManager.h  BindlessTextureManagerTypes.h  CommandPoolManager.h  DescriptorSetManager.h  FormatInfo.h  ImageSamplerManager.h  PipelineManager.h
include/vkb/serial/: from_json.h  from_json_base.h  from_json_enums.h  from_json_flags.h  to_schema.h
include/vkb/utils/: DescriptorSetAllocator.h  DescriptorUpdater.h  DynamicPipeline.h  SPIRV_DescriptorSetLayoutGenerator.h  TextureArrayDescriptorSet.h  multistoragebuffer.h
samples/: pipeline.json
share/shaders/: BindLessTexture.frag  BindLessTexture.vert  compile.sh  frag.spv  model_attributes_MVP.frag  model_attributes_MVP.vert  pbr.frag  pbr.vert  vert.spv
test/: CMakeLists.txt  README.md  unit-BindlessTextureManager.cpp  unit-DescriptorPoolCreate2.cpp  unit-DescriptorSetAllocator.cpp  unit-DescriptorSetLayoutCreate2.cpp  unit-DynamicPipline.cpp  unit-PipelineCreateInfo2.cpp  unit-PipelineLayoutCreate2.cpp  unit-PipelineReflector.cpp  unit-RenderPassCreateInfo2.cpp  unit-ShaderModuleCreate.cpp  unit-SpirvCross.cpp  unit-memory.cpp  unit-schema.cpp  unit_helpers.h
